# ragbench

./: LICENSE  README.md  app.js  core_evaluator.py  index.html  pyproject.toml  style.css
configs/: default.yaml  scale_test.yaml
data/sample/: sample_qa.json
ragbench/: __init__.py  ingest.py  pipeline.py
ragbench/evaluators/: __init__.py  generation_metrics.py  judge.py  latency_profiler.py  retrieval_metrics.py
ragbench/generators/: __init__.py  llm_generator.py
ragbench/optimizers/: __init__.py  ablation.py  bayesian.py  grid_search.py
ragbench/retrievers/: __init__.py  base.py  bm25_retriever.py  dense_retriever.py  graph_retriever.py  hybrid_retriever.py
ragbench/utils/: __init__.py  config.py  logging.py  tracking.py
scripts/: run_benchmark.py
src/ragbench/eval/: metrics.py
src/ragbench/reporting/: dashboard.py
src/ragbench/retrieval/: fusion.py
tests/: test_evaluators.py  test_pipeline.py  test_retrievers.py
