[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ragbench"
version = "2.0.0"
authors = [
  { name="Gokulakrishnan", email="gokulakrishnan@keplerlab.io" },
]
description = "A Production-Grade RAG Evaluation & Optimization Framework."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "openai>=1.0.0",
    "cohere>=4.0.0",
    "sentence-transformers>=2.2.0",
]

[project.urls]
"Homepage" = "https://github.com/gokkrish48-sudo/ragbench"
"Bug Tracker" = "https://github.com/gokkrish48-sudo/ragbench/issues"

[project.scripts]
ragbench = "ragbench.cli:main"
